Fix of functional and performance issue in SelectExecutionPlanner.